# lifetime

./: .gitignore  CMakeLists.txt  build.sh
src/core/: CMakeLists.txt
src/gui/: CMakeLists.txt  main.cpp
